lab-5/abox/releases/agentgateway-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-router
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agentgateway-external
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp
    backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: mcp
